[project]
name = "mcprag"
version = "0.1.0"
description = "A Retrieval Augmented Generation (RAG) system focused on retrieval."
authors = [
    { name = "Your Name", email = "your.email@example.com" }, # TODO: Replace with your name and email
]
dependencies = [
    "chromadb~=0.4.22",
    "sentence-transformers~=2.2.2",
    "pypdf~=3.17.4",
    "python-docx~=1.1.0",
    "tiktoken~=0.5.2",
    "torch>=2.0.0", # Added for sentence-transformers GPU support
    "numpy<2.0.0", # Pin numpy to avoid compatibility issues with chromadb
    "huggingface-hub<0.23.0", # Pin huggingface-hub to avoid cached_download error with sentence-transformers 2.2.2
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
mcprag = "main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyright>=1.1.403",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
