[project]
name = "mcprag"
version = "0.1.0"
description = "A Retrieval Augmented Generation (RAG) system focused on retrieval."
authors = [
    { name = "Your Name", email = "your.email@example.com" }, # TODO: Replace with your name and email
]
dependencies = [
    "chromadb",
    "posthog",
    "pypdf",
    "python-docx",
    "tiktoken",
    "torch",
    "numpy",
    "huggingface-hub",
    "sentence-transformers",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
mcprag = "rag_mcp.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyright>=1.1.403",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
]
